<resources>
    <string name="app_name">TAU Security Management</string>
    <string name="action_logout">Logout</string>

    <string name="save_details">Save Details</string>
    <string name="reset">Reset</string>
    <string name="name_star">Name*</string>
    <string name="phone_star">Phone*</string>
    <string name="position_star">Car Number Plate</string>
    <string name="status_star">Status*</string>
    <string name="resume">Resume</string>
    <string name="hint_below_table">*Tap on value to edit, then press "Save Details"</string>

    <string name="proceed">Proceed</string>
    <string name="clear_fields">clear fields</string>

    <string name="edit_image">Tap on image to pick new:</string>
    <string name="enter_candidate_name">Enter Candidate Name</string>
    <string name="enter_candidate_phone_number">Enter Candidate Phone Number</string>
    <string name="enter_preferable_position">Enter Preferable Position</string>
    <string name="choose_status">Choose Status:</string>
    <string name="upload_resume">Click here to upload resume…</string>
    <string name="view">View</string>
    <string name="upload">Upload</string>
    <string name="add_resident">Add Resident</string>
    <string name="manage_data">Manage Data</string>

    <string-array name="statusSpinnner">
        <item>Active</item>
        <item>DELETE</item>
    </string-array>
</resources>
